apps/gotify/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: gotify
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
    spec:
      containers:
      - name: gotify
        image: gotify/server:2.6.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: data
          mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gotify
