apps/gotify/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: gotify
spec:
  selector:
    app: gotify
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotify
  namespace: gotify
spec:
  ingressClassName: internal
  tls:
  - hosts:
    - gotify.pawked.com
  rules:
  - host: gotify.pawked.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gotify
            port:
              number: 80
